# dmtcp-tests

./: .gitignore  CMakeLists.txt  LICENSE  README.md  call_dmtcp.sh  example.cpp  example_mpi.cpp  kill_long.sh  run_example.sh  run_long.sh  run_test.sh  submit.slurm  submit_array.slurm  submit_openmpi.slurm  submit_openmpi_dmtcp.slurm  submit_sruns.slurm
array-job/: CMakeLists.txt  example.cpp  submit_array.slurm
matlab/: calc_eigen.m  call_calc_eigen.sh  call_check_results.sh  call_gen_test_files.sh  check_results.m  gen_test_files.m
mpi-job/: CMakeLists.txt  example_mpi.cpp  submit_intel_mpi.slurm  submit_openmpi.slurm
serial-job/: CMakeLists.txt  example.cpp  submit_serial.slurm
